[package]
name = "mac-hotkey"
version = "0.6.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
license = "Apache-2.0/MIT"
edition = "2018"

parking_lot = { version = "0.11.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
bitflags = { version = "1.2.1", optional = true }
parking_lot = { version = "0.11.0", optional = true }

[dependencies]
cfg-if = "1.0.0"
serde = { version = "1.0.98", default-features = false, features = ["derive", "alloc"] }
snafu = { version = "0.6.0", default-features = false }

[features]
default = ["std"]
std = ["snafu/std", "serde/std", "parking_lot", "bitflags"]